# forging-blocks

./: .cliff.toml  .git.orig  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_PROJECT_SETUP.md  README.md  RELEASE_GUIDE.md  ROADMAP_v1.0.0.md  cliff.toml  demo_auto_freeze.py  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  objects.inv  project-understanding.md  pyproject.toml  pyrightconfig.json  sitemap.xml  versions.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: epic.md  task.md
.github/events/: release_event.json
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml  pages-deploy.yml  pr-preview-docs.yml  prepare-release.yml  publish-release.yml  publish.yml  release.yml  static-analysis.yml  tag-and-publish.yml  test.yml  validate-artifacts.yml  validate-release-script.yml  validate-release.yml
0.3.1/: 404.html  index.html  redirect_template.html
0.3.1/LICENSE/: index.html
0.3.1/architectural-styles/: index.html
0.3.1/contributing/: index.html
0.3.1/guide/: index.html
0.3.1/reference/: index.html
0.3.1/test_mermaid/: index.html
0.3.12/: 404.html  index.html  redirect_template.html
0.3.12/LICENSE/: index.html
0.3.12/architectural-styles/: index.html
0.3.12/contributing/: index.html
0.3.12/guide/: index.html
0.3.12/reference/: index.html
0.3.12/test_mermaid/: index.html
0.3.13/: 404.html  index.html  redirect_template.html
0.3.13/LICENSE/: index.html
0.3.13/architectural-styles/: index.html
0.3.13/contributing/: index.html
0.3.13/guide/: index.html
0.3.13/reference/: index.html
0.3.13/test_mermaid/: index.html
0.3.14/: 404.html  index.html  redirect_template.html
0.3.14/LICENSE/: index.html
0.3.14/architectural-styles/: index.html
0.3.14/contributing/: index.html
0.3.14/guide/: index.html
0.3.14/reference/: index.html
0.3.14/test_mermaid/: index.html
0.3.15/: 404.html  index.html  redirect_template.html
0.3.15/LICENSE/: index.html
0.3.15/architectural-styles/: index.html
0.3.15/contributing/: index.html
0.3.15/guide/: index.html
0.3.15/reference/: index.html
0.3.15/test_mermaid/: index.html
0.3.16/: 404.html  index.html  redirect_template.html
0.3.16/LICENSE/: index.html
0.3.16/architectural-styles/: index.html
0.3.16/contributing/: index.html
0.3.16/guide/: index.html
0.3.16/reference/: index.html
0.3.16/test_mermaid/: index.html
0.3.17/: 404.html  index.html  redirect_template.html
0.3.17/LICENSE/: index.html
0.3.17/architectural-styles/: index.html
0.3.17/contributing/: index.html
0.3.17/guide/: index.html
0.3.17/reference/: index.html
0.3.17/test_mermaid/: index.html
0.3.19/: 404.html  index.html  redirect_template.html
0.3.19/LICENSE/: index.html
0.3.19/architectural-styles/: index.html
0.3.19/contributing/: index.html
0.3.19/guide/: index.html
0.3.19/reference/: index.html
0.3.19/test_mermaid/: index.html
0.3.20/: 404.html  index.html  redirect_template.html
0.3.20/LICENSE/: index.html
0.3.20/architectural-styles/: index.html
0.3.20/contributing/: index.html
0.3.20/guide/: index.html
0.3.20/reference/: index.html
0.3.20/test_mermaid/: index.html
0.3.21/: 404.html  index.html  objects.inv  redirect_template.html  search.html  sitemap.xml
0.3.21/LICENSE/: index.html
0.3.21/architectural-styles/: index.html
0.3.21/contributing/: index.html
0.3.22/: 404.html  index.html  redirect_template.html
0.3.23/: 404.html  index.html  redirect_template.html
0.3.4/: 404.html  index.html  redirect_template.html
0.3.5/: 404.html  index.html  redirect_template.html
0.3.6/: 404.html  index.html  redirect_template.html
0.3.7/: 404.html  index.html  redirect_template.html
0.4.0/: 404.html  index.html  redirect_template.html
0.4.1/: 404.html  index.html  redirect_template.html  sitemap.xml
0.4.2/: 404.html  index.html  redirect_template.html
0.4.3/: 404.html  index.html  redirect_template.html
0.4.4/: 404.html  index.html  redirect_template.html
CONTRIBUTING/: index.html
LICENSE/: index.html
RELEASE_GUIDE/: index.html
architectural-styles/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv  redirect.html  sitemap.xml  versions.json
docs/: CONTRIBUTING.md  getting-started.md  index.md  index_rewritten.md  redirect_template.html  test_mermaid.md  versions.json
guide/: index.html
latest/: 404.html  index.html  redirect.html  redirect_template.html  sitemap.xml
reference/: index.html
scripts/: README.md  create-labels.sh  create-milestones.sh  deploy_versioned_docs.sh  gen_ref_pages.py  generate_autodoc_pages.py  generate_changelog.sh  generate_redirect_template.py  order_members.py  setup-github-project.sh  validate_publish.sh  validate_release.sh  validate_release_remote.py  validate_release_remote.sh
search/: search_index.json
test_mermaid/: index.html
tests/: conftest.py
v0.3.1/: 404.html  index.html  sitemap.xml
v0.3.12/: 404.html  index.html  sitemap.xml
v0.3.13/: 404.html  index.html  sitemap.xml
v0.3.14/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.15/: 404.html  index.html  sitemap.xml
v0.3.16/: 404.html  index.html  sitemap.xml
v0.3.17/: 404.html  index.html  sitemap.xml
v0.3.19/: 404.html  index.html  sitemap.xml
v0.3.20/: 404.html  index.html  sitemap.xml
v0.3.21/: 404.html  index.html  sitemap.xml
v0.3.22/: 404.html  index.html  sitemap.xml
v0.3.23/: 404.html  index.html  sitemap.xml
v0.3.4/: 404.html  index.html  sitemap.xml
v0.3.5/: 404.html  index.html  sitemap.xml
v0.3.6/: 404.html  index.html  sitemap.xml
v0.3.7/: 404.html  index.html  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml  versions.json
v0.4.1/: 404.html  index.html  sitemap.xml
v0.4.2/: 404.html  index.html  redirect_template.html  sitemap.xml
v0.4.3/: 404.html  index.html  redirect_template.html  sitemap.xml
v0.4.4/: 404.html  index.html  sitemap.xml
vv0.4.2/: 404.html  index.html  sitemap.xml
vv0.4.3/: 404.html  index.html  sitemap.xml
(+6116 files in other folders)
