[tool.poetry]
name = "forging-blocks"
version = "0.4.1"
description = "Composable toolkit for clean, testable, and maintainable Python applications"
authors = ["ForgingBlocks Org <forgingblocksorganization91@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/forging-blocks-org/forging-blocks"
homepage = "https://forging-blocks-org.github.io/forging-blocks/"
packages = [{ include = "forging_blocks", from = "src" }]
keywords = [
    "clean-architecture",
    "hexagonal-architecture",
    "foundation",
    "ddd",
    "domain-driven-design",
    "architecture",
    "result-type",
    "dependency-inversion",
    "ports-and-adapters",
    "python",
    "toolkit",
    "framework-agnostic",
    "testable",
    "maintainable"
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
mypy = "^1.16.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.25.0"
bandit = "^1.7.10"
pre-commit = "^4.2.0"
pyright = "^1.1.404"
poethepoet = "^0.37.0"
libcst = "^1.8.6"
rich = "^14.2.0"
ipython = "^9.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.23"
mkdocstrings = { extras = ["python"], version = "^0.30.1" }
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-autorefs = "^1.4.3"
mkdocs-mermaid2-plugin = "^1.2.3"
mkdocs-section-index = "^0.3.10"
mike = "^2.1.3"
pygments = "^2.19.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repl = "IPython:start_ipython"


[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]
fix = true
extend-exclude = ["site", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "D"]
ignore = ["B008", "D105", "D106", "D107", "D203", "D213"]
pydocstyle.convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["forging_blocks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
omit = [
    "*/foundation/debuggable.py",
    "*/foundation/mapper.py",
    "*/foundation/result.py",
    "*/foundation/result_mapper.py",
    "*/foundation/ports.py",
    "*/application/ports/outbound/notifier.py",
    "*/application/ports/outbound/repository.py",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "if TYPE_CHECKING:",
    "class .*\\(.*Protocol.*\\):",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",
    "pass",
    "TypeVar\\(",
    "Generic\\(",
    "Protocol\\(",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true
mypy_path = "src"
exclude = ["tests/*", "scripts/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=forging_blocks",
    "--cov-report=term-missing",
    "--cov-fail-under=90"
]

[tool.poe.tasks]
lint = { cmd = "ruff check ." }
"lint:fix" = { cmd = "ruff check . --fix" }
type = { cmd = "mypy src" }
test = { cmd = "pytest --strict-markers --tb=line" }
bandit = { cmd = "bandit -r src -x tests" }

"docs:generate" = { cmd = "python scripts/generate_autodoc_pages.py" }

"docs:build".sequence = [
  "docs:generate",
  { cmd = "poetry run mkdocs build --strict" }
]

"ci:check".sequence = [
  "lint",
  "type",
  "test",
  "bandit"
]

"ci:simulate".sequence = [
  "ci:check",
  "docs:build"
]

"ci:release:validate".sequence = [
  "ci:simulate",
  { cmd = "poetry build" },
  { shell = "echo \"Release candidate validated for version $(poetry version -s)\"" }
]

"changelog:generate".sequence = [
  { shell = "bash scripts/generate_changelog.sh > .changelog.tmp" },
  { shell = "cat .changelog.tmp CHANGELOG.md 2>/dev/null > CHANGELOG.new || cat .changelog.tmp > CHANGELOG.new" },
  { shell = "mv CHANGELOG.new CHANGELOG.md" },
  { shell = "rm .changelog.tmp" },
  { shell = "echo 'Changelog updated.'" }
]

"release:validate".sequence = [
  { shell = "echo 'Validating release readiness...'" },
  { shell = "git rev-parse --abbrev-ref HEAD | grep -qx main || (echo 'ERROR: must start from main' && exit 1)" },
  { shell = "git diff --quiet || (echo 'ERROR: working tree not clean' && exit 1)" },
  { cmd = "git fetch origin" },
  { shell = "git diff --quiet origin/main...HEAD || (echo 'ERROR: local main differs from origin/main' && exit 1)" },
  "ci:release:validate",
  { shell = "echo 'OK: release validated'" }
]

"release:patch".sequence = [
  "release:validate",
  { shell = "poetry version patch" },
  { shell = "VERSION=$(poetry version -s)" },
  { shell = "poe changelog:generate" },
  { shell = "BRANCH=release/v$VERSION" },
  { shell = "git checkout -b \"$BRANCH\"" },
  { shell = "git add pyproject.toml poetry.lock CHANGELOG.md || true" },
  { shell = "git commit -m \"release: $VERSION\"" },
  { shell = "git tag \"v$VERSION\"" },
  { shell = "git push origin \"$BRANCH\" --tags" },
  { shell = """
if command -v gh >/dev/null 2>&1; then
  gh pr create \
    --base main \
    --head \"$BRANCH\" \
    --title \"release: $VERSION\" \
    --body \"Release $VERSION

This PR contains only the version bump and generated changelog.

- Version: $VERSION
- Tag: v$VERSION\"
else
  echo \"Create PR manually:\"
  echo \"https://github.com/forging-blocks-org/forging-blocks/compare/$BRANCH?expand=1\"
fi
""" }
]

"release:minor".sequence = [
  "release:validate",
  { shell = "poetry version minor" },
  { shell = "VERSION=$(poetry version -s)" },
  { shell = "poe changelog:generate" },
  { shell = "BRANCH=release/v$VERSION" },
  { shell = "git checkout -b \"$BRANCH\"" },
  { shell = "git add pyproject.toml poetry.lock CHANGELOG.md || true" },
  { shell = "git commit -m \"release: $VERSION\"" },
  { shell = "git tag \"v$VERSION\"" },
  { shell = "git push origin \"$BRANCH\" --tags" },
  { shell = """
if command -v gh >/dev/null 2>&1; then
  gh pr create \
    --base main \
    --head \"$BRANCH\" \
    --title \"release: $VERSION\" \
    --body \"Release $VERSION

This PR contains only the version bump and generated changelog.\"
else
  echo \"Create PR manually:\"
  echo \"https://github.com/forging-blocks-org/forging-blocks/compare/$BRANCH?expand=1\"
fi
""" }
]

"release:major".sequence = [
  "release:validate",
  { shell = "poetry version major" },
  { shell = "VERSION=$(poetry version -s)" },
  { shell = "poe changelog:generate" },
  { shell = "BRANCH=release/v$VERSION" },
  { shell = "git checkout -b \"$BRANCH\"" },
  { shell = "git add pyproject.toml poetry.lock CHANGELOG.md || true" },
  { shell = "git commit -m \"release: $VERSION\"" },
  { shell = "git tag \"v$VERSION\"" },
  { shell = "git push origin \"$BRANCH\" --tags" },
  { shell = """
if command -v gh >/dev/null 2>&1; then
  gh pr create \
    --base main \
    --head \"$BRANCH\" \
    --title \"release: $VERSION\" \
    --body \"Release $VERSION

This PR contains only the version bump and generated changelog.\"
else
  echo \"Create PR manually:\"
  echo \"https://github.com/forging-blocks-org/forging-blocks/compare/$BRANCH?expand=1\"
fi
""" }
]
