[tool.poetry]
name = "forging-blocks"
version = "0.3.6"
description = "Composable toolkit for clean, testable, and maintainable Python applications"
authors = ["ForgingBlocks Org <forgingblocksorganization91@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/forging-blocks-org/forging-blocks"
homepage = "https://forging-blocks-org.github.io"
packages = [{ include = "forging_blocks", from = "src" }]
keywords = [
    "clean-architecture",
    "hexagonal-architecture",
    "foundation",
    "ddd",
    "domain-driven-design",
    "architecture",
    "result-type",
    "dependency-inversion",
    "ports-and-adapters",
    "python",
    "toolkit",
    "framework-agnostic",
    "testable",
    "maintainable"
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
mypy = "^1.16.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.25.0"
bandit = "^1.7.10"
pre-commit = "^4.2.0"
pyright = "^1.1.404"
poethepoet = "^0.37.0"
libcst = "^1.8.6"
rich = "^14.2.0"
ipython = "^9.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.23"
mkdocstrings = { extras = ["python"], version = "^0.30.1" }
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-autorefs = "^1.4.3"
mkdocs-mermaid2-plugin = "^1.2.3"
mkdocs-section-index = "^0.3.10"
mike = "^2.1.3"
pygments = "^2.19.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

include = ["src", "tests", "scripts"]
extraPaths = ["src", "scripts"]
exclude = [
  "**/site",
  "**/__pycache__",
  "**/.venv",
  "**/build",
  "**/dist",
  "**/.mypy_cache",
  "**/.ruff_cache",
  "**/node_modules",
]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.poetry.scripts]
repl = "IPython:start_ipython"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]
fix = true
extend-exclude = ["site", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "D"]
ignore = ["B008", "D105", "D106", "D107", "D203", "D213"]
pydocstyle.convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["forging_blocks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "*/foundation/debuggable.py",
    "*/foundation/mapper.py",
    "*/foundation/result.py",
    "*/foundation/result_mapper.py",
    "*/foundation/ports.py",
    "*/application/ports/outbound/notifier.py",
    "*/application/ports/outbound/repository.py",
    "**/inbound.py",
    "**/outbound.py",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "if TYPE_CHECKING:",
    "class .*\\(.*Protocol.*\\):",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",
    "pass",
    "TypeVar\\(",
    "Generic\\(",
    "Protocol\\(",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true
mypy_path = "src"
exclude = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts", "scripts/release"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=forging_blocks",
    "--cov=scripts/release",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
markers = [
  "unit: mark tests as unit tests",
  "integration: mark tests as integration tests",
]

[tool.poe.tasks]
lint = { cmd = "ruff check ." }
"lint:fix" = { cmd = "ruff check . --fix" }

type = "mypy src"
bandit = "bandit -r src -x tests"

test = "pytest"
"test:debug" = "pytest -x -vvv -s"

"docs:generate" = { cmd = "python scripts/generate_autodoc_pages.py" }
"docs:build".sequence = [
  "docs:generate",
  { cmd = "poetry run mkdocs build --strict" }
]

"ci:check".sequence = [
  "lint",
  "type",
  "test",
  "bandit",
]
"ci:simulate".sequence = [
  "ci:check",
  "docs:build"
]
"ci:release:validate".sequence = [
  "ci:check",
  { cmd = "poetry build" }
]

"changelog:generate".sequence = [
  { shell = "bash scripts/release/generate_changelog.sh > .changelog.tmp" },
  { shell = "cat .changelog.tmp CHANGELOG.md 2>/dev/null > CHANGELOG.new || cat .changelog.tmp > CHANGELOG.new" },
  { shell = "mv CHANGELOG.new CHANGELOG.md" },
  { shell = "rm .changelog.tmp" },
  { shell = "echo 'Changelog updated.'" }
]

"release:validate".sequence = [
  { shell = "echo 'Validating release readiness...'" },
  { shell = "git rev-parse --abbrev-ref HEAD | grep -qx main || (echo 'ERROR: must start from main' && exit 1)" },
  { shell = "git diff --quiet || (echo 'ERROR: working tree not clean' && exit 1)" },
  { cmd = "git fetch origin --tags" },
  { shell = "git diff --quiet origin/main...HEAD || (echo 'ERROR: local main differs from origin/main' && exit 1)" },
  "ci:release:validate",
  { shell = "echo 'OK: release validated'" }
]

release = { cmd = "python -m scripts.release.presentation.cli", env = { "PYTHONPATH" = "src:scripts:scripts/release" } }
